# weather

./: .env.example  .gitignore  AGENTS.md  Gemfile  README.md  gtwo.xml  index-at.xml  pyproject.toml  run_tests.py  test_env_support.py  test_error_handling.py  test_integration.py  test_weather.py  weather.py  weather.rb  weather_cache.sqlite  weather_feed.xml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: test.yml
stubs/feedgen/: __init__.pyi  feed.pyi
tests/: __init__.py  conftest.py  run_tests.py  test_env_support.py  test_error_handling.py  test_integration.py
