[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "bs4>=0.0.2",
    "feedgen>=1.0.0",
    "image>=1.5.33",
    "requests-cache>=1.2.1",
    "requests>=2.32.3",
    "slack-sdk>=3.31.0",
]
