[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "bs4>=0.0.2",
    "feedgen>=1.0.0",
    "image>=1.5.33",
    "requests-cache>=1.2.1",
    "requests>=2.32.3",
    "slack-sdk>=3.31.0",
    "discord-py>=2.4.0",
    "pytz>=2025.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = [
    ".",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=weather",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.pyright]
typeCheckingMode = "basic"
stubPath = "stubs"

[dependency-groups]
dev = [
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-pillow>=10.2.0.20240822",
    "types-requests>=2.32.4.20250913",
]
